--- a/roles/k8s/templates/master-openssl.cnf.j2
+++ b/roles/k8s/templates/master-openssl.cnf.j2
@@ -10,7 +10,8 @@ subjectAltName = @alt_names
 DNS.1 = kubernetes
 DNS.2 = kubernetes.default
 DNS.3 = kubernetes.default.svc
-DNS.4 = kubernetes.default.svc.cluster.local
+DNS.4 = kubernetes.default.svc.cluster
+DNS.5 = kubernetes.default.svc.cluster.local
 IP.1 = 10.250.0.1
 IP.2 = {{ k8s_cluster_network | ipsubnet(25,0) | ipaddr(10) | ipaddr('address') }}
 IP.3 = {{ k8s_external_ip }}
